# PortCLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  RELEASE.md  TEST_REPORT.md  TEST_REPORT_LINUX.md  app.go  go.mod  install.sh  main.go  release.md  setup-env.sh  spec.md  tasks.md  test_linux.sh  test_linux_forward.sh  version.md
.github/workflows/: ci.yml  release.yml
config/: manager.go  types.go
forwarder/: engine.go  logger.go  rule.go
frontend/: package.json.md5
frontend/src/: App.svelte
frontend/src/components/: RuleForm.svelte  RuleItem.svelte
frontend/src/lib/: api.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
server/: Cargo.toml  core.rs
server/src/: main.rs
src/: cli.rs  config.rs  control.rs  daemon.rs  error.rs  forward.rs  logs.rs  main.rs  state.rs
tests/: udp_forwarding.rs
webui/: api.go  server.go
